# KoGPT-VIT-fine-tuning

./: README.md  pyproject.toml  requirements.txt
configs/: config_score.yaml
configs/inference/: config_inference_VIT_GPT2_V2.yaml  config_inference_VIT_SWIN_V1.yaml  config_inference_base.yaml
configs/train/: config_train_VIT_GPT2_V1.yaml  config_train_VIT_GPT2_V2.yaml  config_train_VIT_SWIN_V1.yaml  config_train_base.yaml
run/: __main__.py  inference.py  scoring.py  train.py
src/: data.py  model_utils.py  module.py  utils.py
