[tool.poetry]
name = "korean-ic-env"
version = "0.1.0"
description = "A project for the Korean Image Captioning Competition"
authors = ["Sangwon Baek <baeksw98@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.0"
transformers = "4.23.1"
pytorch-lightning = "1.7.7"
rouge-metric = "1.0.1"
wandb = "0.13.4"
torchmetrics = "0.9.3"
numpy = "<2.0.0"  # Downgrade to a version below 2.0
pandas = "^2.2.2"
pillow = "^10.4.0"
datasets = "^2.21.0"
deepspeed = "^0.14.5"
nltk = "^3.8.1"
mecab-python3 = "^1.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
